[project]
name = "shapiq-permutation-iq"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "shapiq>=1.3.1",
    "overrides>=7.7.0", # note: this has just been forgotten by the shapiq package
    "numpy>=2.2.6",
    "pandas>=2.3.2",
]
